# learning

./: Both_AcumulatedReward.csv  LinuxBasicsandTips.odt  PipeDiagram.pptx  QL_AcumulatedReward.csv  README.md  RosFixes.odt  SARSA_AcumulatedReward.csv  SARSAconvgTable.csv  Useful_Links.odt  breakCondhalfpos.csv  breakCondhalfposQL.csv  breakCondhalfposQL2.csv  breakCondhalfposSARSA2.csv  comparingMinesVFracIdv2.m  d2_christina_veney.tar.xz  exampleBashScript.bash  finalPerformanceQL.csv  finalPerformanceSARSA.csv  learnedTrial1.csv  learnedTrial2QL.csv  moreFunctions.py  simple_GogsGit_cheatsheet.docx  v2QL_AcumulatedReward.csv  v2SARSA_AcumulatedReward.csv  v3QL_AcumulatedReward.csv  v3SARSA_AcumulatedReward.csv
HumanRobotInteractions/: al_dialog_edit.py  audio_speechrecognition.py
HumanRobotInteractions/Lab3/: Lab3.pml  manifest.xml
Human_Centered_Robotics/: 04-ROS_Basics.odg  D1_christina_veney.tar.xz  D2_Christina_Veney.tar.xz  ROSreference.odt  d1_christina_veney.tar.xz  followWall.py
Human_Centered_Robotics/d1_christina_veney/: README.md
IndepStudy/: RostopicListHusky  Useful_Project_Details  personalReadMe
Mechatronics/: DeviceCommsMessaging.xlsx  LabRequirementsOverview
PersonalPythonCodes/: LearnGui.py  SimonSays.py  audioML_test.py  learningChatBots.py  playmp3.py  plotGaussian.py  readCSV.py  snake.py  test.py  testingPythonTTS.py
QLearningTutorial/: p1_Table_Qlearning.py
QlearningPackage/: CMakeLists.txt  package.xml
QlearningPackage/launch/: test.launch
QlearningPackage/src/: Qlearning.py  fwd.py  fwd_laser.py  states_v2.py
(+46 files in other folders)
