<?xml version="1.0"?>
<package format="2">
  <name>d1_christina_veney</name>
  <version>0.0.0</version>
  <description>Deliverable 1 for part 2 of Human Centered Robotics project</description>

  <maintainer email="christina.veney11@gmail.com">christina</maintainer>

  <license>BSD</license>

  <url type="website">http://inside.mines.edu/~hzhang/Courses/CSCI473-573/Projects/Project-2-Spring2020-D1.pdf</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
